logs/lamson.log
2009-10-23 21:27:39,045 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-23 21:28:09,455 - root - DEBUG - Message received from Peer: ('127.0.0.1', 36755), From: 'me@mydomain.com', to To ['test@test.com'].
2009-10-23 21:28:09,462 - routing - DEBUG - Message to set(['test@test.com']) from 'me@mydomain.com' didn't match any handlers. (# recipients: 1)
2009-10-24 12:40:23,386 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-24 12:41:37,027 - root - DEBUG - Message received from Peer: ('127.0.0.1', 36798), From: 'sean@zeus', to To ['test@test.com'].
2009-10-24 12:41:37,034 - routing - DEBUG - Message to set(['test@test.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
2009-10-24 17:06:57,826 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-24 17:10:45,243 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-25 12:19:59,460 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-25 12:34:33,385 - root - INFO - SMTPReceiver started on localhost:8823.
2009-10-25 15:38:28,596 - root - DEBUG - Message received from Peer: ('127.0.0.1', 39656), From: 'sean@zeus', to To ['test.list@postosaurus.com'].
2009-10-25 15:38:28,766 - routing - DEBUG - Matched 'test.list@postosaurus.com' against START.
2009-10-25 15:38:28,767 - root - DEBUG - AHHHHHHHHHHHHHHHHHHHHHHH!
2009-10-25 15:38:28,767 - root - DEBUG - test.list@postosaurus.com
2009-10-25 15:38:28,878 - routing - ERROR - !!! ERROR handling app.handlers.admin.START
Traceback (most recent call last):
  File "/home/sean/deploy/LAMSON/lib/python2.6/site-packages/lamson-1.0pre6-py2.6.egg/lamson/routing.py", line 373, in call_safely
    func(message, **kwargs)
  File "/home/sean/deploy/LAMSON/lib/python2.6/site-packages/lamson-1.0pre6-py2.6.egg/lamson/routing.py", line 494, in routing_wrapper
    next_state = func(message, *args, **kw)
  File "/home/sean/deploy/postosaurus/app/handlers/admin.py", line 20, in START
    POSTING(message, list_name=list_name, host=host)
  File "/home/sean/deploy/LAMSON/lib/python2.6/site-packages/lamson-1.0pre6-py2.6.egg/lamson/routing.py", line 494, in routing_wrapper
    next_state = func(message, *args, **kw)
  File "/home/sean/deploy/postosaurus/app/handlers/admin.py", line 11, in POSTING
    if mailinglist.is_subscribed(message['from'], list_name):
  File "/home/sean/deploy/postosaurus/app/model/mailinglist.py", line 8, in is_subscribed
    if find_subscription(address, list_name):
  File "/home/sean/deploy/postosaurus/app/model/mailinglist.py", line 57, in find_subscription
    assert mlist, "Mailing list %s must exist to find a subscription." % list_name
AssertionError: Address must map to user Sean Fioritto <sean@zeus> to find a subscription.
2009-10-25 15:41:20,562 - root - DEBUG - Message received from Peer: ('127.0.0.1', 39663), From: 'sean@zeus', to To ['test.list@postosaurus.com'].
2009-10-25 15:41:20,577 - routing - DEBUG - Message to set(['test.list@postosaurus.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
2009-10-25 15:43:04,155 - root - DEBUG - Message received from Peer: ('127.0.0.1', 39402), From: 'sean@zeus', to To ['testlist@postosaurus.com'].
2009-10-25 15:43:04,169 - routing - DEBUG - Message to set(['testlist@postosaurus.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
2009-10-25 16:56:01,862 - root - DEBUG - Message received from Peer: ('127.0.0.1', 46119), From: 'sean@zeus', to To ['testlist@postosaurus.com'].
2009-10-25 16:56:01,865 - routing - ERROR - ERROR RELOADING 'app.handlers.admin' MODULE:
Traceback (most recent call last):
  File "/home/sean/deploy/LAMSON/lib/python2.6/site-packages/lamson-1.0pre6-py2.6.egg/lamson/routing.py", line 431, in reload
    reload(sys.modules[module])
  File "/home/sean/deploy/postosaurus/app/handlers/admin.py", line 20
     POSTING(message, list_name=list_name, host=host)
           ^
 SyntaxError: invalid syntax
2009-10-25 16:56:01,866 - routing - DEBUG - Message to set(['testlist@postosaurus.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
2009-10-25 16:57:52,028 - root - DEBUG - Message received from Peer: ('127.0.0.1', 35925), From: 'sean@zeus', to To ['testlist@postosaurus.com'].
2009-10-25 16:57:52,042 - routing - DEBUG - Message to set(['testlist@postosaurus.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
2009-10-25 16:59:06,740 - root - DEBUG - Message received from Peer: ('127.0.0.1', 35929), From: 'sean@zeus', to To ['testlist@postosaurus.com'].
2009-10-25 16:59:06,754 - routing - DEBUG - Message to set(['testlist@postosaurus.com']) from 'sean@zeus' didn't match any handlers. (# recipients: 1)
